--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,13 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation group: 'org.postgresql', name:'postgresql', version: '42.7.2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.1'
+	implementation 'org.hibernate.orm:hibernate-core:7.0.0.Beta1'
+	implementation 'org.hibernate:hibernate-entitymanager:6.0.0.Alpha7'
+	implementation 'jakarta.persistence:jakarta.persistence-api:3.2.0'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
